# async-kafka-logger

./: README.md  pyproject.toml
src/: AsyncKafkaHandler.py  example.py
